--- a/eco_project_react/package.json
+++ b/eco_project_react/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
+    "save-dev": "0.0.1-security",
+    "svgstore": "^3.0.1",
     "swiper": "^8.0.6",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -22,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "svg": "node generate-svgs.js"
   },
   "eslintConfig": {
     "extends": [
